--- a/frontend/src/styles/statement/StatementForm.css
+++ b/frontend/src/styles/statement/StatementForm.css
@@ -1,3 +1,51 @@
-label{
+.statementForm{
+    min-height: 60vh;
+    width: 60%;
+    margin: 20px auto 0 auto;
+    text-align: center;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between; 
+}
+
+.statementForm label{
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
     display: block;
+}
+
+.statementForm .form-inline{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-gap: 10px;
+}
+
+.statementForm input,
+.statementForm,select{
+    cursor: pointer;
+    width: 60%;
+    padding: 5px;
+}
+
+.statementForm button{
+    margin-top: 5px;
+    display: block;
+    width: 60%;
+    height: 40px;
+    cursor: pointer;
+    background-color: #000;
+    border: 2px solid black;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: whitesmoke;
+    transition: .2s;
+    padding: 10px;
+}
+
+
+.statementForm button:hover{
+    border: 2px solid whitesmoke;
 }
